Add a note for the user that warns about the calculation time (proportionnal to the number)

--- a/nthroot.html
+++ b/nthroot.html
@@ -13,6 +13,8 @@
 
 		<h2><u>The way it works :</u> <br><br>1. Enter the number whose root you want to calculate and select the order of the root. <br>2. Press "calculate" and you will have the result !</h2>
 
+		<p><u>Note :</u> The larger the number you enter, the longer the calculation time will be. The screen may remain frozen for a few seconds before displaying the result. <br>You can read the explanations below.</p>
+
 		<form id="form">
 			<h3>
 				Enter the number whose root you want to calculate :
